@@ -49,6 +49,7 @@
 
 package org.netbeans.modules.cnd.dwarfdump.section;
 
+import java.io.ByteArrayOutputStream;
 import org.netbeans.modules.cnd.dwarfdump.dwarf.DwarfStatementList;
 import org.netbeans.modules.cnd.dwarfdump.reader.DwarfReader;
 import java.io.IOException;
@@ -67,7 +68,7 @@ public class DwarfLineInfoSection extends ElfSection {
     }
     
     public DwarfStatementList getStatementList(long offset) {
-        Long lOffset = new Long(offset);
+        Long lOffset = Long.valueOf(offset);
         DwarfStatementList statementList = statementLists.get(lOffset);
         
         if (statementList == null) {
@@ -132,5 +133,13 @@ public class DwarfLineInfoSection extends ElfSection {
             statementList.dump(out);
         }
     }    
+
+    @Override
+    public String toString() {
+        ByteArrayOutputStream st = new ByteArrayOutputStream();
+        PrintStream out = new PrintStream(st);
+        dump(out);
+        return st.toString();
+    }
 }
 
